force-app/main/default/objects/Task/fields/HoraVencimento__c.field-meta.xml
<CustomField>
    <fullName>HoraVencimento__c</fullName>
    <description>Horário de vencimento da tarefa.</description>
    <label>Hora de Vencimento</label>
    <type>Time</type>
</CustomField>