force-app/main/default/objects/Task/fields/NotificadoAntesVencer__c.field-meta.xml
<CustomField>
    <fullName>NotificadoAntesVencer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o responsável foi notificado antes do vencimento.</description>
    <label>Notificado Antes de Vencer</label>
    <type>Checkbox</type>
</CustomField>