force-app/main/default/objects/Task/fields/NotificadoAposVencer__c.field-meta.xml
<CustomField>
    <fullName>NotificadoAposVencer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o responsável foi notificado após o vencimento.</description>
    <label>Notificado Após Vencer</label>
    <type>Checkbox</type>
</CustomField>