force-app/main/default/objects/Task/recordTypes/Jornada_do_Cliente.recordType-meta.xml
<RecordType>
    <fullName>Jornada_do_Cliente</fullName>
    <active>true</active>
    <label>Jornada do Cliente</label>
</RecordType>