force-app/main/default/objects/Task/validationRules/ValidacaoConcluidoEntregaKitWeg.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoConcluidoEntregaKitWeg</fullName>
    <active>true</active>
    <description>Validar a alteração de Status para Complete sem preencher os campos obrigatórios</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &quot;Jornada_do_Cliente&quot;,
Subject=&quot;Entrega do Kit WEG&quot;,
ISNULL(EstimatedDateKitWeb__c),
TEXT(Status) = &quot;Complete&quot;
)</errorConditionFormula>
    <errorMessage>Preecha o campo &quot;Previsão de entrega Kit WEG&quot;. A tarefa será concluída automaticamente e será enviada a notificação ao cliente ao preencher o campo.</errorMessage>
</ValidationRule>