force-app/main/default/objects/Task/validationRules/ValidacaoConcluidoVistoria.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoConcluidoVistoria</fullName>
    <active>true</active>
    <description>Validar a alteração de Status para Complete sem preencher os campos obrigatórios.</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &quot;Jornada_do_Cliente&quot;,
Subject=&quot;Vistoria&quot;,
OR(ISNULL(DateInspectionRequest__c), ISNULL(InspectionDays__c )),
TEXT(Status) = &quot;Complete&quot;
)</errorConditionFormula>
    <errorMessage>Preecha os campos &quot;Data de solicitação da vistoria e Prazo para vistoria&quot;. A tarefa será concluída automaticamente e será enviada a notificação ao cliente ao preencher o campo.</errorMessage>
</ValidationRule>