force-app/main/default/objects/Task/listViews/ANALISTA_DE_POS_VENDAS_Task.listView-meta.xml
<ListView>
    <fullName>ANALISTA_DE_POS_VENDAS_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Analista de Pós Vendas</label>
    <queue>ANALISTA_DE_POS_VENDAS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>