force-app/main/default/objects/Task/listViews/Analista_de_Qualidade_Task.listView-meta.xml
<ListView>
    <fullName>Analista_de_Qualidade_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Analista_de_Qualidade</label>
    <queue>Analista_de_Qualidade</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>