force-app/main/default/objects/Task/listViews/ANALISTA_PROJETOS_Task.listView-meta.xml
<ListView>
    <fullName>ANALISTA_PROJETOS_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Analista de Projetos</label>
    <queue>ANALISTA_PROJETOS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>