force-app/main/default/objects/Task/listViews/AnalistaViabilidadeCompromisso_Task.listView-meta.xml
<ListView>
    <fullName>AnalistaViabilidadeCompromisso_Task</fullName>
    <columns>SUBJECT</columns>
    <columns>WHO_NAME</columns>
    <columns>WHAT_NAME</columns>
    <columns>DUE_DATE</columns>
    <columns>STATUS</columns>
    <columns>PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Analistas de Viabilidade (Compromissos)</label>
    <queue>AnalistaViabilidadeCompromisso</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>