force-app/main/default/objects/Task/listViews/CompletedTasks.listView-meta.xml
<ListView>
    <fullName>CompletedTasks</fullName>
    <columns>SUBJECT</columns>
    <columns>WHO_NAME</columns>
    <columns>WHAT_NAME</columns>
    <columns>DUE_DATE</columns>
    <columns>STATUS</columns>
    <columns>PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY,LAST_N_DAYS:30</value>
    </filters>
    <label>Tarefas recentemente concluídas</label>
</ListView>