force-app/main/default/objects/Task/listViews/CONTABILIDADE_Task.listView-meta.xml
<ListView>
    <fullName>CONTABILIDADE_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>CONTABILIDADE</label>
    <queue>CONTABILIDADE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>