force-app/main/default/objects/Task/listViews/CONTRATO_Task.listView-meta.xml
<ListView>
    <fullName>CONTRATO_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Contrato</label>
    <queue>CONTRATO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>