force-app/main/default/objects/Task/listViews/Contratos_Task.listView-meta.xml
<ListView>
    <fullName>Contratos_Task</fullName>
    <columns>SUBJECT</columns>
    <columns>WHO_NAME</columns>
    <columns>WHAT_NAME</columns>
    <columns>DUE_DATE</columns>
    <columns>STATUS</columns>
    <columns>PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Contratos</label>
    <queue>Contratos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>