force-app/main/default/objects/Task/listViews/COORDENADOR_DE_ENGENHARIA_Task.listView-meta.xml
<ListView>
    <fullName>COORDENADOR_DE_ENGENHARIA_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Coordernador de Engenharia</label>
    <queue>COORDENADOR_DE_ENGENHARIA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>