force-app/main/default/objects/Task/listViews/COORDENADOR_DE_POS_VENDA_Task.listView-meta.xml
<ListView>
    <fullName>COORDENADOR_DE_POS_VENDA_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Coordernador de Pós Vendas</label>
    <queue>COORDENADOR_DE_POS_VENDA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>