force-app/main/default/objects/Task/listViews/DelegatedTasks.listView-meta.xml
<ListView>
    <fullName>DelegatedTasks</fullName>
    <columns>SUBJECT</columns>
    <columns>WHO_NAME</columns>
    <columns>WHAT_NAME</columns>
    <columns>DUE_DATE</columns>
    <columns>STATUS</columns>
    <columns>PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Delegated</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>tdias</value>
    </filters>
    <label>Tarefas delegadas</label>
</ListView>